objects/IND_Report_and_Dashboard__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is used by Industrial Admins</description>
    <fields>
        <fullName>Add_in_AM_Section__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add in AM Section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_in_Devices_Sub_Section__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add in Devices Sub-Section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_in_Executive_Section__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add in Executive Section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_in_FE_Section__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add in FE Section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_in_GAM_Section__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add in GAM&apos;s and KAM &apos;s Section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_in_GSM_Section__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add in PM Section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_in_Industrial_Sub_Section__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add in Industrial Sub-Section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_in_Other_Section__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add in Other Section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_in_RSM_Section__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add in SM Section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_in_Systems_Sub_Section__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add in Systems Sub-Section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ID_of_Report_or_Dashboard__c</fullName>
        <label>ID of Report or Dashboard</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Dashboard_Link__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If it is a Report link then keep this field unchecked. if it is a Dashboard link then check the field.</description>
        <inlineHelpText>If it is a Report link then keep this field unchecked. if it is a Dashboard link then check the field.</inlineHelpText>
        <label>Is Dashboard Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>IND Report and Dashboard</label>
    <listViews>
        <fullName>All_Link_List</fullName>
        <columns>NAME</columns>
        <columns>Is_Dashboard_Link__c</columns>
        <columns>Short_Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>ID_of_Report_or_Dashboard__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Link List</label>
        <language>en_US</language>
    </listViews>
</CustomObject>